# gryfo_image_processing

./: LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/api/: adapter.py  controller.py  handler.py  middleware.py  router.py
app/cli/: __init__.py  process.py  serve.py  transform.py
app/src/: image_transformer.py
app/tests/: conftest.py  test_cli.py  test_process_image.py
app/tests/assets/: lenna_edges_flipped.json
tests/: conftest.py  test_api.py  test_cli.py
tests/assets/: lenna.json  lenna_blurred.json
ui/api/: TODO.md  adapter.py  controller.py  exceptions.py  handler.py  middleware.py  protocols.py  router.py
ui/cli/: __init__.py  serve.py  transform.py
ui/web/: TODO.md  index.html  main.js  style.css
