[tool.poetry]
name = "gryfo-image-processing"
version = "0.1.0"
description = "Gryfo's challenge for setting up basic image processing sequence"
authors = ["Carlos Fernandes"]
license = "MIT"
readme = "README.md"
packages = [{include = "gryfo_image_processing"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
ipython = "^8.12.0"
pytest = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
